--- a/Commercial/src/Commercial.Web/Clients/commercial-spa/package.json
+++ b/Commercial/src/Commercial.Web/Clients/commercial-spa/package.json
@@ -14,8 +14,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@mantine/core": "^7.1.5",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^1.5.1",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1"
@@ -33,8 +35,6 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jsdom": "^21.1.0",
-    "prettier": "^2.7.1",
-    "prettier-config-nick": "^1.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
@@ -51,6 +51,5 @@
       "prettier/prettier": "error",
       "react/jsx-no-target-blank": "off"
     }
-  },
-  "prettier": "prettier-config-nick"
+  }
 }
