--- a/Commercial/src/Commercial.Web/Clients/commercial-spa/.gitignore
+++ b/Commercial/src/Commercial.Web/Clients/commercial-spa/.gitignore
@@ -7,24 +7,25 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependencies
 node_modules
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-# Swap the comments on the following lines if you don't wish to use zero-installs
-# Documentation here: https://yarnpkg.com/features/zero-installs
-!.yarn/cache
-#.pnp.*
-
-# Testing
+.DS_Store
+dist
+dist-ssr
 coverage
-
-# Production
-build
-
-# Miscellaneous
 *.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+test-results/
+playwright-report/
