--- a/Commercial/src/Commercial.Web/Clients/commercial-spa/package.json
+++ b/Commercial/src/Commercial.Web/Clients/commercial-spa/package.json
@@ -1,55 +1,42 @@
 {
-  "name": "vite-template-redux",
-  "private": true,
+  "name": "commercial-spa",
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
+    "build": "run-p type-check \"build-only {@}\" --",
+    "test:e2e": "playwright test",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "build-only": "vite build",
     "dev": "vite",
-    "start": "vite",
-    "build": "tsc && vite build",
+    "format": "prettier --write src/",
     "preview": "vite preview",
-    "test": "vitest",
-    "format": "prettier --write .",
-    "lint": "eslint .",
-    "type-check": "tsc"
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "@mantine/core": "^7.1.5",
-    "@reduxjs/toolkit": "^1.8.1",
-    "axios": "^1.5.1",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1"
+    "@quasar/extras": "^1.0.0",
+    "pinia": "^2.1.7",
+    "quasar": "^2.0.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.2.5",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jsdom": "^21.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.0.0",
-    "vitest": "^0.30.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": "error",
-      "react/jsx-no-target-blank": "off"
-    }
+    "@playwright/test": "^1.39.0",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^18.18.5",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.0.3",
+    "sass": "1.32.12",
+    "sass-loader": "^12.0.0",
+    "typescript": "~5.2.0",
+    "vite": "^4.4.11",
+    "vue-cli-plugin-quasar": "~5.0.2",
+    "vue-tsc": "^1.8.19"
   }
 }
